<resources>
    <string name="app_name">OffCourse</string>
    <string name="sign_in">Sign in</string>
    <string name="slogan">Stay connected, even if connection is lost</string>
    <string name="create_account_or_sign_in">Create account or sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="your_username">Your username</string>
    <string name="choose_password">Choose password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in_username">Username</string>
    <string name="sign_in_password">Enter password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_contact_text">To start new conversation, exchange your QR-codes.
        Your QR can be found in "Show QR".</string>
    <string name="show_this_qr_to_your_companion">Show this QR to your companion</string>

    <string name="shared_pref_key">com.github.victimoftrap.offcourse.SHARED_PREF_FILE</string>
    <string name="shared_pref_username_key">com.github.victimoftrap.offcourse.USERNAME</string>
    <string name="shared_pref_user_id_key">com.github.victimoftrap.offcourse.USER_ID</string>

    <string name="shared_pref_qr_scanned">com.github.victimoftrap.offcourse.QR_SCANNED</string>
    <string name="shared_pref_qr_showed">com.github.victimoftrap.offcourse.QR_SHOWED</string>

    <string name="connection_user_id">user_id</string>
    <string name="connection_username">username</string>
    <string name="connection_address">ip_address</string>
    <string name="connection_port">port</string>
    <string name="my_message_params">my_message_params</string>
    <string name="companion_message_params">companion_message_params</string>
</resources>